--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".di.HiltApplication"
+        android:name=".di.MathAppApplication"
 
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
