--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,6 @@ plugins {
     id 'kotlin-kapt'
 
 
-
-
 }
 
 android {
@@ -86,6 +84,11 @@ dependencies {
 
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
+
+
+    //ObserverState
+    implementation("androidx.compose.runtime:runtime-livedata:$compose_version")
+
 }
 kapt {
     correctErrorTypes true
