--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,12 +82,18 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-    implementation "com.google.dagger:hilt-android:2.44"
-    kapt "com.google.dagger:hilt-compiler:2.44"
+   // implementation "com.google.dagger:hilt-android:2.44"
+   // kapt "com.google.dagger:hilt-compiler:2.44"
 
+    implementation "com.google.dagger:hilt-android:$dagger_version"
+    kapt "com.google.dagger:hilt-android-compiler:$dagger_version"
 
     //ObserverState
     implementation("androidx.compose.runtime:runtime-livedata:$compose_version")
+
+    //Corutin
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
 
 }
 kapt {
