--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,16 @@ buildscript {
     ext {
         compose_version = '1.2.1'
         nav_version = '2.4.1'
+        dagger_version = '2.44'
+    }
+    repositories {
+        google()
+        mavenCentral()
     }
     dependencies {
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:${nav_version}")
         classpath 'com.google.gms:google-services:4.3.10'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$dagger_version"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
