--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,6 +112,9 @@ dependencies {
     // To use Kotlin annotation processing tool (kapt)
     kapt "androidx.room:room-compiler:$room_version"
 
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
+
 }
 kapt {
     correctErrorTypes true
