--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,6 +114,9 @@ dependencies {
 
     //Gson
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    // viewModel()
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07'
 }
 kapt {
     correctErrorTypes true
