[chat,quiz] Create chat, help in quiz

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,8 +66,11 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.room:room-ktx:2.4.3'
+
+    //Firebase
     implementation 'com.google.firebase:firebase-firestore-ktx:24.4.5'
     implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
+    implementation 'com.google.firebase:firebase-auth:21.0.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -117,6 +120,10 @@ dependencies {
 
     // viewModel()
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07'
+
+    //gplay servises
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
 }
 kapt {
     correctErrorTypes true
